// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Build content map for > autotitle chain (hashIncludes default, mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "a.md": {
      "hash": "sha256-b655181fb0cafc6961e19b77b2fbfff7b0d7168564de5afcb7758a46781d36b4",
      "size": 269,
    },
    "b.md": {
      "hash": "sha256-09825813cd131b693e849b18c96d1604764fe5e4f83ffd032197ca123cbd15e0",
      "size": 273,
    },
    "c.md": {
      "hash": "sha256-e006a9869bbf1d019bc14da10f185e92e041c5a1c325076bb2dd04cc8c2def56",
      "size": 260,
    },
    "toc.yaml": {
      "hash": "sha256-8bf60b589e4bb972e7b9ca9d924f6f8911f9d41e268bf710f0d5197246b576fd",
      "size": 157,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > autotitle chain (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "a.md": {
      "hash": "sha256-b655181fb0cafc6961e19b77b2fbfff7b0d7168564de5afcb7758a46781d36b4",
      "size": 269,
    },
    "b.md": {
      "hash": "sha256-09825813cd131b693e849b18c96d1604764fe5e4f83ffd032197ca123cbd15e0",
      "size": 273,
    },
    "c.md": {
      "hash": "sha256-e006a9869bbf1d019bc14da10f185e92e041c5a1c325076bb2dd04cc8c2def56",
      "size": 260,
    },
    "toc.yaml": {
      "hash": "sha256-8bf60b589e4bb972e7b9ca9d924f6f8911f9d41e268bf710f0d5197246b576fd",
      "size": 157,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > autotitle target with include (hashIncludes default, mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "_includes/snippet.md": {
      "hash": "sha256-15e5534f3fd87d3799fc5ba720332adc871dc63ac87c27ab1baf6b083d5b5812",
      "size": 57,
    },
    "a.md": {
      "hash": "sha256-8630b78ff83631731623927bdb420c452b15c28b5f73d9621171de94f23d02fc",
      "size": 275,
    },
    "b.md": {
      "hash": "sha256-8d187bd7e4c508d723bccde429acefc70b4d7e3211f2606614e0b49ce704ac72",
      "size": 284,
    },
    "toc.yaml": {
      "hash": "sha256-f0e5f8342a96da110f1a0c3dc468ce8bf536d9971b7f6268b7afc6327ba2d163",
      "size": 144,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > autotitle target with include (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "a.md": {
      "hash": "sha256-8630b78ff83631731623927bdb420c452b15c28b5f73d9621171de94f23d02fc",
      "size": 275,
    },
    "b.md": {
      "hash": "sha256-3b6bd3fb5b72f40d32cce279a828bab084299885c8d16e41e01d20b0e012893d",
      "size": 361,
    },
    "toc.yaml": {
      "hash": "sha256-f0e5f8342a96da110f1a0c3dc468ce8bf536d9971b7f6268b7afc6327ba2d163",
      "size": 144,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > diamond includes (hashIncludes default, mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "_includes/branch-a.md": {
      "hash": "sha256-3314f60ae1fcaaccab27d5075d5a8ad01bb5d139cc37f4240304d83a9ce88ace",
      "size": 101,
    },
    "_includes/branch-b.md": {
      "hash": "sha256-0d5505b5775980c435e7cb35b0452089980640ff5bc0878a45db8b23901099dd",
      "size": 102,
    },
    "_includes/shared.md": {
      "hash": "sha256-42e099cba25de4c74b858b07c83d4feb6565738d4e21ad3e7208f6e35048931d",
      "size": 55,
    },
    "index.md": {
      "hash": "sha256-6c47ed5f3f70148f66a1e9a00c18387879da2dee7b28cbe4c38ee0a79a0075e0",
      "size": 398,
    },
    "toc.yaml": {
      "hash": "sha256-5309b6c21d914169deeb265ac1988546c6c0ab47d100b89c4083efb3f711f872",
      "size": 116,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > diamond includes (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "index.md": {
      "hash": "sha256-30660c8d47e254600925ae12bf4ad6b1b63d897e45234f48d64428cb1885bcc1",
      "size": 811,
    },
    "toc.yaml": {
      "hash": "sha256-5309b6c21d914169deeb265ac1988546c6c0ab47d100b89c4083efb3f711f872",
      "size": 116,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > nested includes (hashIncludes default, mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "_includes/level1.md": {
      "hash": "sha256-8720c7deb66b06273ae8fb303accf2a399e622b647e222cbb0dc12c74cdb0df7",
      "size": 121,
    },
    "_includes/level2.md": {
      "hash": "sha256-2ce37af4320216777549f95a5e533efb4486802619b4916aae31764ba98f3339",
      "size": 62,
    },
    "index.md": {
      "hash": "sha256-2d3a6cafce3fe09b379ab772d3456fa10d04ed88655bc261a324cbfd82f917a2",
      "size": 353,
    },
    "toc.yaml": {
      "hash": "sha256-8044d42eecbbbfbf108ef785d04d322e72b2381cea30243cf3accc2ccf469f89",
      "size": 115,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > nested includes (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "index.md": {
      "hash": "sha256-28716131092de497b0c4136442af07c700fae19531658b92674027c002562479",
      "size": 586,
    },
    "toc.yaml": {
      "hash": "sha256-8044d42eecbbbfbf108ef785d04d322e72b2381cea30243cf3accc2ccf469f89",
      "size": 115,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > project with an include and a picture (mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "_includes/snippet.md": {
      "hash": "sha256-25c382135c889a69ff3a79390f978f030364fc2fcec5e7db6e6e441c57791a61",
      "size": 26,
    },
    "index.md": {
      "hash": "sha256-70841a5b016792e18c4cc26ac38860681599e524c5f2387585e976fe5dab35f9",
      "size": 332,
    },
    "logo.svg": {
      "hash": "sha256-d13530939abcb6584d6b07c97ded2d9fc6d5751ef4c0262afe36cee3fad0d51c",
      "size": 3402,
    },
    "toc.yaml": {
      "hash": "sha256-08e2907230e064c5ce52e5859d5a3780ed84c41756f921f896a88033a40e0ae9",
      "size": 108,
    },
  },
  "pageAssets": {
    "index.md": [
      "logo.svg",
    ],
  },
  "schemaVersion": 1,
}
`;

exports[`Build content map for > project with an include and a picture (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "index.md": {
      "hash": "sha256-442c7c36f1557cfbbdabbd87fd9cd2856c1c47f049cc3e22913ffc1a1d542157",
      "size": 378,
    },
    "logo.svg": {
      "hash": "sha256-d13530939abcb6584d6b07c97ded2d9fc6d5751ef4c0262afe36cee3fad0d51c",
      "size": 3402,
    },
    "toc.yaml": {
      "hash": "sha256-08e2907230e064c5ce52e5859d5a3780ed84c41756f921f896a88033a40e0ae9",
      "size": 108,
    },
  },
  "pageAssets": {
    "index.md": [
      "logo.svg",
    ],
  },
  "schemaVersion": 1,
}
`;

exports[`Build content map for > project with autotitle links between pages (mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "index.md": {
      "hash": "sha256-dab75e3b6993ed5c6d4facd4e1627915184d5ba1401a495000539202b30ddd95",
      "size": 274,
    },
    "other.md": {
      "hash": "sha256-ed6aa222dc1698b4279046c188dd58b6bfb331c5a628eb48e241ab61c7289a66",
      "size": 252,
    },
    "toc.yaml": {
      "hash": "sha256-1455d101a04ae60d37e5ace467d36e4c650e481d90f22ce46cd7b637c33cf541",
      "size": 145,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > project with autotitle links between pages (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "index.md": {
      "hash": "sha256-dab75e3b6993ed5c6d4facd4e1627915184d5ba1401a495000539202b30ddd95",
      "size": 274,
    },
    "other.md": {
      "hash": "sha256-ed6aa222dc1698b4279046c188dd58b6bfb331c5a628eb48e241ab61c7289a66",
      "size": 252,
    },
    "toc.yaml": {
      "hash": "sha256-1455d101a04ae60d37e5ace467d36e4c650e481d90f22ce46cd7b637c33cf541",
      "size": 145,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;
